Fixed spacing between block elements

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -35,5 +35,5 @@ button {
 .container {
 	max-width: 120rem;
 	margin-inline: auto;
-	padding: 6.4rem 2.4rem 15rem 2.4rem;
+	padding: 12.8rem 2.4rem 15rem 2.4rem;
 }
