--- a/src/styles/components/_FeaturedModels.module.scss
+++ b/src/styles/components/_FeaturedModels.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/base';
 
 .featured {
-	margin-bottom: 9.6rem;
+	margin-bottom: 10.8rem;
 
 	& > header {
 		@include centered-flex(2rem);
