--- a/src/styles/components/_FilterTags.module.scss
+++ b/src/styles/components/_FilterTags.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/base';
 
 .tags {
-	margin-bottom: 3.2rem;
+	margin-bottom: 6.2rem;
 
 	@include centered-flex(1.2rem);
 	flex-wrap: wrap;
