--- a/src/styles/components/_Hero.module.scss
+++ b/src/styles/components/_Hero.module.scss
@@ -8,7 +8,7 @@
 	align-items: center;
 	gap: 2.4rem;
 
-	margin-bottom: 5.2rem;
+	margin-bottom: 9rem;
 
 	h2 {
 		color: $primary;
